// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reminder renders correctly when bordered 1`] = `
<DocumentFragment>
  .emotion-1 {
  height: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: transparent;
  border: 1px solid #dce1eb;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

.emotion-1.emotion-1 {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover {
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

.emotion-1 strong {
  color: #3f6ed8;
}

.emotion-3 {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-3.emotion-3 {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="emotion-0 emotion-1"
    icon="east"
    type="button"
  >
    <span>
      This is a sample Test
    </span>
    <svg
      class="sc-ui-icon emotion-2 emotion-3"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with bold 1`] = `
<DocumentFragment>
  .emotion-1 {
  height: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: transparent;
  border: 1px solid #dce1eb;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

.emotion-1.emotion-1 {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover {
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

.emotion-1 strong {
  color: #3f6ed8;
}

.emotion-3 {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-3.emotion-3 {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="emotion-0 emotion-1"
    icon="east"
    type="button"
  >
    <span>
      This is a 
      <strong>
        bold
      </strong>
       Test
    </span>
    <svg
      class="sc-ui-icon emotion-2 emotion-3"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with default values 1`] = `
<DocumentFragment>
  .emotion-1 {
  height: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: #e4edff;
  border: 1px solid transparent;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

.emotion-1.emotion-1 {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover {
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

.emotion-1 strong {
  color: #3f6ed8;
}

.emotion-3 {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-3.emotion-3 {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="emotion-0 emotion-1"
    icon="east"
    type="button"
  >
    <span>
      This is a sample Test
    </span>
    <svg
      class="sc-ui-icon emotion-2 emotion-3"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Reminder renders correctly with variant 1`] = `
<DocumentFragment>
  .emotion-1 {
  height: 28px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 14px;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
  font-weight: 400;
  background-color: transparent;
  border: 1px solid #dce1eb;
  -webkit-transition: all .3s ease-in-out;
  transition: all .3s ease-in-out;
}

.emotion-1.emotion-1 {
  font-size: 12px;
  padding-right: 8px;
  padding-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:hover {
  box-shadow: 0 3px 6px #e4edff;
  border: 1px solid #3f6ed8;
}

.emotion-1 strong {
  color: #3f6ed8;
}

.emotion-3 {
  fill: #3f6ed8;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.emotion-3.emotion-3 {
  vertical-align: middle;
  margin-left: 4px;
}

<a
    class="emotion-0 emotion-1"
    icon="east"
    type="button"
  >
    <span>
      This is a sample Test
    </span>
    <svg
      class="sc-ui-icon emotion-2 emotion-3"
      viewBox="0 0 24 24"
    >
      <path
        d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
      />
    </svg>
  </a>
</DocumentFragment>
`;
